--- a/contractgenerator/CMakeLists.txt
+++ b/contractgenerator/CMakeLists.txt
@@ -5,16 +5,16 @@ project(contractgenerator VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 6.2 COMPONENTS Quick REQUIRED)
+find_package(Qt6 6.2 COMPONENTS Quick REQUIRED printsupport)
 
 qt_add_executable(appcontractgenerator
-    main.cpp
+    main.cpp filereader.h filereader.cpp
 )
 
 qt_add_qml_module(appcontractgenerator
     URI contractgenerator
     VERSION 1.0
-    QML_FILES main.qml 
+    QML_FILES main.qml LabelInput.qml
 )
 
 set_target_properties(appcontractgenerator PROPERTIES
@@ -26,7 +26,7 @@ set_target_properties(appcontractgenerator PROPERTIES
 )
 
 target_link_libraries(appcontractgenerator
-    PRIVATE Qt6::Quick)
+    PRIVATE Qt6::Quick PRIVATE Qt6::PrintSupport )
 
 install(TARGETS appcontractgenerator
     BUNDLE DESTINATION .
